--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ opencv-python>=4.8.0
 numpy>=1.24.0
 scikit-image>=0.21.0
 svgwrite>=1.4.3
-scipy>=1.10.0 
+scipy>=1.10.0
+flask==3.0.2
+flask-cors==4.0.0
+python-dotenv==1.0.1 
